Closed Bug 1414991 Opened 7 years ago Closed 7 years ago

Unified build failure in media

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(1 file)

Updating gecko-media today, and spent half the day fixing unified build failures... Here's the media ones.
Comment on attachment 8925731 [details]
Bug 1414991 - Unified build fixes in media.

https://reviewboard.mozilla.org/r/196870/#review202062
Attachment #8925731 - Flags: review?(gsquelart) → review+
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e7a73f6647de
Unified build fixes in media. r=gerald
https://hg.mozilla.org/mozilla-central/rev/e7a73f6647de
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: