Bug 1414991 - Unified build fixes in media. r=gerald

MozReview-Commit-ID: KjLeQMSxOfO